Update month label font size and add Valentine's Day

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     .share-btn.import { background: #10b981; }
     .planner-container { display: flex; flex-direction: column; gap: 4px; min-width: max-content; }
     .month-row { display: flex; }
-    .month-label { width: 60px; height: 130px; display: flex; align-items: center; justify-content: center; background: #ddd; font-size: 11px; font-weight: bold; writing-mode: vertical-rl; transform: rotate(180deg); border: 1px solid #ccc; position: sticky; left: 0; z-index: 500; }
+    .month-label { width: 60px; height: 130px; display: flex; align-items: center; justify-content: center; background: #ddd; font-size: 15px; font-weight: bold; writing-mode: vertical-rl; transform: rotate(180deg); border: 1px solid #ccc; position: sticky; left: 0; z-index: 500; }
     .calendar-grid { display: flex; gap: 2px; background: #ccc; padding: 2px; border: 1px solid #ccc; }
     .day-box { width: 110px; height: 130px; background: white; padding: 4px; display: flex; flex-direction: column; position: relative; box-sizing: border-box; }
     .day-box.span-preview { background-color: #fffbeb !important; border: 1px solid #fde68a; }
@@ -74,6 +74,7 @@
       "2026-01-25": { name: "Peter Kramer Birthday", pers: true },
       "2026-01-26": { name: "Australia Day", au: true },
       "2026-02-13": { name: "Daddy Lim Birthday", pers: true },
+      "2026-02-14": { name: "Valentine's Day", ph: true, au: true },
       "2026-02-17": { name: "Chinese New Year", ph: true },
       "2026-02-25": { name: "EDSA Revolution", ph: true },
       "2026-03-09": { name: "Labor Day (AU)", au: true },
@@ -90,6 +91,7 @@
       "2026-06-09": { name: "Bebeboy Birthday", pers: true },
       "2026-06-12": { name: "Independence Day (PH)", ph: true },
       "2026-06-24": { name: "Achi Lim Birthday", pers: true },
+      "2026-07-16": { name: "Happy Anniversary Love", pers: true },
       "2026-08-21": { name: "Ninoy Aquino Day", ph: true },
       "2026-08-25": { name: "Bebegirl Birthday", pers: true },
       "2026-08-31": { name: "National Heroes Day", ph: true },
